# PIA-Casa-de-Apoio

./: .gitignore  README.md  app.py  database.py  db.py  main.py  pyproject.toml  requirements.txt  user.py  wsgi.py
app/: utils_cpf.py
app/models/: user_model.py
app/routes/: admin_routes.py  main_routes.py
templates/: admin_logins.html  admin_register.html  aguardando_autorizacao.html  login.html  main.html
tests/: conftest.py  test_basic.py  test_models.py  test_routes.py
